--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-numpy
-pandas
-matplotlib
-seaborn
-streamlit 
-opencv-python 
-deepface 
-Pillow 
-tensorflow
-scikit-learn
-scikit-image7
+streamlit>=1.32.0
+pandas>=1.5.0
+plotly>=5.5.0
+yfinance>=0.2.30
